--- a/eCommerceApp.Infrastructure/eCommerceApp.Infrastructure.csproj
+++ b/eCommerceApp.Infrastructure/eCommerceApp.Infrastructure.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\eCommerceApp.Application\eCommerceApp.Application.csproj" />
   </ItemGroup>
 
 </Project>
