--- a/eCommerceApp.Host/appsettings.json
+++ b/eCommerceApp.Host/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "Default": "Server=DERABOLA\\SQLEXPRESS01;Database=EcommerceOneDb;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
 }
