--- a/eCommerceApp.Application/eCommerceApp.Application.csproj
+++ b/eCommerceApp.Application/eCommerceApp.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\eCommerceApp.Domain\eCommerceApp.Domain.csproj" />
   </ItemGroup>
 
