--- a/eCommerceApp.Host/appsettings.json
+++ b/eCommerceApp.Host/appsettings.json
@@ -1,12 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "Default": "Server=DERABOLA\\SQLEXPRESS01;Database=EcommerceOneDb;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+        "JWT": {
+            "Issuer": "ecommerceIssuer",
+            "Audience": "ecommerceAudience",
+            "Key": "wBcN3#8ja!IRe8#2kZnVmf3P#rUdjc5P"
+        }
     }
-}
+
