--- a/eCommerceApp.Host/appsettings.json
+++ b/eCommerceApp.Host/appsettings.json
@@ -9,10 +9,10 @@
     "ConnectionStrings": {
         "Default": "Server=DERABOLA\\SQLEXPRESS01;Database=EcommerceOneDb;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
-        "JWT": {
-            "Issuer": "ecommerceIssuer",
-            "Audience": "ecommerceAudience",
-            "Key": "wBcN3#8ja!IRe8#2kZnVmf3P#rUdjc5P"
-        }
+    "JWT": {
+        "Issuer": "https://localhost:7025", //Authority
+        "Audience": "https://localhost:7025", //whom api token is made to consume
+        "Key": "wBcN3#8ja!IRe8#2kZnVmf3P#rUdjc5P"
+    }
     }
 
