fixed login issue

--- a/eCommerceApp.Host/appsettings.json
+++ b/eCommerceApp.Host/appsettings.json
@@ -9,7 +9,7 @@
     "ConnectionStrings": {
         "Default": "Server=DERABOLA\\SQLEXPRESS01;Database=EcommerceOneDb;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
-    "JWT": {
+    "Jwt": {
         "Issuer": "https://localhost:7025", //Authority
         "Audience": "https://localhost:7025", //whom api token is made to consume
         "Key": "wBcN3#8ja!IRe8#2kZnVmf3P#rUdjc5P"
