--- a/eCommerceApp.Domain/eCommerceApp.Domain.csproj
+++ b/eCommerceApp.Domain/eCommerceApp.Domain.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\NewFolder\" />
+  </ItemGroup>
+
 </Project>
