completed stripe payment setup

--- a/eCommerceApp.Host/appsettings.json
+++ b/eCommerceApp.Host/appsettings.json
@@ -13,6 +13,9 @@
         "Issuer": "https://localhost:7025", //Authority
         "Audience": "https://localhost:7025", //whom api token is made to consume
         "Key": "wBcN3#8ja!IRe8#2kZnVmf3P#rUdjc5P"
+    },
+    "Stripe": {
+        "SecreteKey":  ""
     }
-    }
+}
 
